6 January 2020: Wouter
	- Merge #135 from Florian Obser: Use passed in neg and key cache
	  if non-NULL.

16 December 2019: George
	- Update mailing list URL.

12 December 2019: Ralph
	- Master is 1.9.7 in development.
	- Fix typo to let serve-expired-ttl work with ub_ctx_set_option(), by
	  Florian Obser

10 December 2019: Wouter
	- Fix to make auth zone IXFR to fallback to AXFR if a single
	  response RR is received over TCP with the SOA in it.

6 December 2019: Wouter
	- Fix ipsecmod compile.
	- Fix Makefile.in for ipset module compile, from Adi Prasaja.
	- release-1.9.6 tag, which became the 1.9.6 release

5 December 2019: Wouter
	- unbound-fuzzers.tar.bz2: three programs for fuzzing, that are 1:1
	  replacements for unbound-fuzzme.c that gets created after applying
	  the contrib/unbound-fuzzme.patch.  They are contributed by
	  Eric Sesterhenn from X41 D-Sec.
	- tag for 1.9.6rc1.

4 December 2019: Wouter
	- Fix lock type for memory purify log lock deletion.
	- Fix testbound for alloccheck runs, memory purify and lock checks.
	- update contrib/fastrpz.patch to apply more cleanly.
	- Fix Make Test Fails when Configured With --enable-alloc-nonregional,
	  reported by X41 D-Sec.

3 December 2019: Wouter
	- Merge pull request #124 from rmetrich: Changed log lock
	  from 'quick' to 'basic' because this is an I/O lock.
	- Fix text around serial arithmatic used for RRSIG times to refer
	  to correct RFC number.
	- Fix Assert Causing DoS in synth_cname(),
	  reported by X41 D-Sec.
	- Fix similar code in auth_zone synth cname to add the extra checks.
	- Fix Assert Causing DoS in dname_pkt_copy(),
	  reported by X41 D-Sec.
	- Fix OOB Read in sldns_wire2str_dname_scan(),
	  reported by X41 D-Sec.
	- Fix Out of Bounds Write in sldns_str2wire_str_buf(),
	  reported by X41 D-Sec.
	- Fix Out of Bounds Write in sldns_b64_pton(),
	  fixed by check in sldns_str2wire_int16_data_buf(),
	  reported by X41 D-Sec.
	- Fix Insufficient Handling of Compressed Names in dname_pkt_copy(),